--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,6 @@ tmp.py
 *.npz
 
 # utool output
-_test_times.txt
 failed.txt
 
 # Cyth
@@ -71,6 +70,5 @@ run_cyth_benchmarks.sh
 
 _doc
 
-test_times.txt
-
 failed_doctests.txt
+timeings.txt
