--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,7 @@ after_success:
     - TSP=$CI_GITHUB_SECRET openssl enc -aes-256-cbc -md MD5 -pass env:TSP -d -a -in dev/gpg_owner_trust.enc | $GPG_EXECUTABLE --import-ownertrust
     - TSP=$CI_GITHUB_SECRET openssl enc -aes-256-cbc -md MD5 -pass env:TSP -d -a -in dev/travis_secret_gpg_key.pgp.enc | $GPG_EXECUTABLE --import 
     - $GPG_EXECUTABLE --list-keys
-    - MB_PYTHON_TAG=$(python -c "import setup; print(setup.MB_PYTHON_TAG)")
+    - MB_PYTHON_TAG=$(python -c "import setup; print(setup.native_mb_python_tag())")
     - VERSION=$(python -c "import setup; print(setup.VERSION)") 
     - |
         pip install twine
