--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,18 @@ ignore_missing_imports = true
 
 [tool.xcookie]
 # TODO: allow xcookie config to be specified in __init__.py
+rel_mod_parent_dpath = "."
 tags = [ "erotemic", "purepy", "github", "cv2"]
 mod_name = "plottool_ibeis"
 repo_name = "plottool_ibeis"
 os = [ "win", "linux", "osx",]
-version = "2.2.0"
+ci_pypy_versions = []
 description = "Plottool - tools matplotlib computer vision plots"
 url="https://github.com/Erotemic/plottool_ibeis"
 author="Jon Crall"
 author_email="erotemic@gmail.com"
+min_python = 3.7
+version = "{mod_dpath}/__init__.py::__version__"
 license = "Apache 2"
 dev_status = "beta"
 autostage = true
