Don't support 311 yet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ mod_name = "plottool_ibeis"
 repo_name = "plottool_ibeis"
 os = [ "win", "linux", "osx",]
 ci_pypy_versions = []
+# ci_cpython_versions = ["3.7", "3.8", "3.9", "3.10"]
+supported_python_versions = ["3.7", "3.8", "3.9", "3.10"]
 description = "Plottool - tools matplotlib computer vision plots"
 url="https://github.com/Erotemic/plottool_ibeis"
 author="Jon Crall"
