--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -101,83 +101,83 @@ jobs:
         include:
         - python-version: '3.7'
           os: ubuntu-latest
-          install-extras: tests-strict,runtime-strict
+          install-extras: tests-strict,runtime-strict,headless-strict
           arch: auto
         - python-version: '3.7'
           os: macOS-latest
-          install-extras: tests-strict,runtime-strict
+          install-extras: tests-strict,runtime-strict,headless-strict
           arch: auto
         - python-version: '3.7'
           os: windows-latest
-          install-extras: tests-strict,runtime-strict
+          install-extras: tests-strict,runtime-strict,headless-strict
           arch: auto
         - python-version: '3.10'
           os: ubuntu-latest
-          install-extras: tests-strict,runtime-strict,optional-strict
+          install-extras: tests-strict,runtime-strict,optional-strict,headless-strict
           arch: auto
         - python-version: '3.10'
           os: macOS-latest
-          install-extras: tests-strict,runtime-strict,optional-strict
+          install-extras: tests-strict,runtime-strict,optional-strict,headless-strict
           arch: auto
         - python-version: '3.10'
           os: windows-latest
-          install-extras: tests-strict,runtime-strict,optional-strict
+          install-extras: tests-strict,runtime-strict,optional-strict,headless-strict
           arch: auto
         - python-version: '3.10'
           os: macOS-latest
-          install-extras: tests
+          install-extras: tests,headless
           arch: auto
         - python-version: '3.10'
           os: windows-latest
-          install-extras: tests
+          install-extras: tests,headless
           arch: auto
         - python-version: '3.7'
           os: ubuntu-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.8'
           os: ubuntu-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.9'
           os: ubuntu-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.10'
           os: ubuntu-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.7'
           os: macOS-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.8'
           os: macOS-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.9'
           os: macOS-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.10'
           os: macOS-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.7'
           os: windows-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.8'
           os: windows-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.9'
           os: windows-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
         - python-version: '3.10'
           os: windows-latest
-          install-extras: tests,optional
+          install-extras: tests,optional,headless
           arch: auto
     steps:
     - name: Checkout source
